some changes for i3-config rc.conf

--- a/tag-i3/config/i3/config
+++ b/tag-i3/config/i3/config
@@ -15,7 +15,7 @@ new_float normal
 exec_always --no-startup-id compton -b 
 
 #feh
-exec_always --no-startup-id feh --bg-scale "Pictures/002.jpg"
+exec_always --no-startup-id feh --bg-scale "Pictures/003.png"
 
 #polybar
 exec_always --no-startup-id "$HOME/.config/polybar/launch.sh"
