--- a/tag-ranger/config/ranger/rc.conf
+++ b/tag-ranger/config/ranger/rc.conf
@@ -353,7 +353,8 @@ map ut      tag_remove
 map <Space> mark_files toggle=True
 map v       mark_files all=True toggle=True
 map uv      mark_files all=True val=False
-map V       toggle_visual_mode
+#map V       toggle_visual_mode
+map V				console shell vim%space
 map uV      toggle_visual_mode reverse=True
 
 # For the nostalgics: Midnight Commander bindings
