--- a/tag-i3/config/i3/config
+++ b/tag-i3/config/i3/config
@@ -33,6 +33,9 @@ exec_always --no-startup-id fcitx
 
 exec --no-startup-id nm-applet
 
+#volumeicon
+exec --no-startup-id volumeicon
+
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
