--- a/tag-ranger/config/ranger/rc.conf
+++ b/tag-ranger/config/ranger/rc.conf
@@ -406,28 +406,31 @@ map }     traverse
 map {     traverse_backwards
 map )     jump_non
 
-map gh cd ~
-map gi cd ~/Github
-map ge cd /etc
-map gu cd /usr
-map gd cd /Desktop
-map gD cd /Download
-map gff cd ~/.config
-map gfr cd ~/.config/ranger
-
-map gl cd -r .
-map gL cd -r %f
-map go cd /opt
-map gv cd /var
-map gm cd /media
-#map gi eval fm.cd('/run/media/' + os.getenv('USER'))
-map gM cd /mnt
-map gs cd /srv
-map gp cd /tmp
-#map gr cd /
-map gR eval fm.cd(ranger.RANGERDIR)
-map g/ cd /
-#map g? cd /usr/share/doc/ranger
+#map gh cd ~
+#map gi cd ~/Github
+#map ge cd /etc
+#map gu cd /usr
+#map gd cd /Desktop
+#map gD cd /Download
+#map gff cd ~/.config
+#map gfr cd ~/.config/ranger
+#
+#map gl cd -r .
+#map gL cd -r %f
+#map go cd /opt
+#map gv cd /var
+#map gm cd /media
+##map gi eval fm.cd('/run/media/' + os.getenv('USER'))
+#map gM cd /mnt
+#map gs cd /srv
+#map gp cd /tmp
+##map gr cd /
+#map gR eval fm.cd(ranger.RANGERDIR)
+#map g/ cd /
+##map g? cd /usr/share/doc/ranger
+#map gg cd /mnt/hgfs/Google 雲端硬碟
+map gv cd /mnt/hgfs/Google 雲端硬碟/資訊總/程式相關/Visual Studio Code
+map gr cd ~/.config/ranger/
 
 
 
@@ -491,12 +494,19 @@ map =  search_next
 map -  search_next forward=False
 map <C-f> fzf_select
 map f console scout -ftsea%space
+
 #map ct search_next order=tag
 #map cs search_next order=size
 #map ci search_next order=mimetype
 #map cc search_next order=ctime
 #map cm search_next order=mtime
 #map ca search_next order=atime
+
+# 新增的c相關快捷
+map cf console touch%space 
+map cm console mkcd%space
+map X console extracthere%space
+map C console compress%space
 
 # Tabs
 map tn		tab_new
